--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -69,6 +69,11 @@
                 "value": "{\"m_Value\":true}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "UnityEditor.Polybrush.PolybrushEditor-isUtilityWindow",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "UnityEngine.Polybrush.BrushMirror, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorAxis",
                 "value": "{\"m_Value\":0}"
@@ -96,12 +101,12 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":61}"
+                "value": "{\"m_Value\":128}"
             },
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":6159819195323411483,\"guid\":\"73e6b74d24e0f8a4f9893bae51b76435\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":-6250076149019478384,\"guid\":\"73e6b74d24e0f8a4f9893bae51b76435\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":-2422315340263230684,\"guid\":\"73e6b74d24e0f8a4f9893bae51b76435\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":8144394004440419581,\"guid\":\"73e6b74d24e0f8a4f9893bae51b76435\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":7000681528817744779,\"guid\":\"73e6b74d24e0f8a4f9893bae51b76435\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":-967756895460181807,\"guid\":\"77c1ba6094371a24696b0d8867606e69\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":8144394004440419581,\"guid\":\"77c1ba6094371a24696b0d8867606e69\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":-2422315340263230684,\"guid\":\"77c1ba6094371a24696b0d8867606e69\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":-6250076149019478384,\"guid\":\"77c1ba6094371a24696b0d8867606e69\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":919132149155446097,\"guid\":\"9356ad0e9badc514386e9f54822d2081\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":1922178828898829899,\"guid\":\"2811bb8c16e778045b9f5428a9985ac4\",\"type\":3}}]}}"
             },
             {
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
