--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -106,7 +106,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":6615889026144341470,\"guid\":\"1519627acbbd95c4eb0e9c7229c4f3c4\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":7956202187035966085,\"guid\":\"e7cde8ecd1a9bdf498b09cb959a7eed1\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":9099418378848424447,\"guid\":\"9dd9d771d00521a4da9190ce7cb37a20\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":6615889026144341470,\"guid\":\"1519627acbbd95c4eb0e9c7229c4f3c4\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":7956202187035966085,\"guid\":\"e7cde8ecd1a9bdf498b09cb959a7eed1\",\"type\":3}}]}}"
             },
             {
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
