--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -106,7 +106,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":8782328845624358846,\"guid\":\"1099d79e4e9e5e34b989081fd7e653cc\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":462445718055466248,\"guid\":\"c2f5cb1232c7ff64fa8aed03e811133f\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":9158007524532412382,\"guid\":\"676c35ebf77aa5543a1fd79df797f3c9\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"5c9bf5feaea3d7a4ba877088400020a8\",\"type\":2},\"prefab\":{\"fileID\":1758005881192240168,\"guid\":\"c229ee6f7ef1732458a3c4c6bb5dfb92\",\"type\":3}}]}}"
             },
             {
                 "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
