--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,7 +10,7 @@ scopes = {
 	"last_search.83F126EB" = "Level"
 	"InspectorPreview.83F126EB" = "0"
 	"currentGroup.83F126EB" = "asset"
-	"last_search.7F95D817" = "poly"
+	"last_search.7F95D817" = "Mesh_Genie_Floor_100"
 	"InspectorPreview.7F95D817" = "0"
 	"currentGroup.7F95D817" = "scene"
 	"last_search.785D90A9" = ""
@@ -55,6 +55,8 @@ providers = {
 	}
 }
 recentSearches = [
+	"Mesh_Genie_Floor_100"
+	"poly"
 	"Object"
 ]
 searchItemFavorites = [
